[gd_scene load_steps=25 format=4 uid="uid://cam2n3o5ookil"]

[ext_resource type="Texture2D" uid="uid://dwt52fk84nvsb" path="res://Textures/test_atlas_texture.tres" id="1_0y4xf"]
[ext_resource type="Script" path="res://Scripts/EnemyHandler.gd" id="1_utey3"]
[ext_resource type="Script" path="res://Scripts/TowerHandler.gd" id="2_7o725"]
[ext_resource type="Texture2D" uid="uid://dkv1qx08q54ne" path="res://Textures/Map/tileset.png" id="3_1u0c1"]
[ext_resource type="Script" path="res://Scripts/round_handler.gd" id="3_5b40h"]
[ext_resource type="Texture2D" uid="uid://mcetcdwiyku8" path="res://Textures/UI/background_small.png" id="7_6jwmj"]
[ext_resource type="Texture2D" uid="uid://7xtgrgtpddoh" path="res://Textures/UI/scrollbar.png" id="7_un8fm"]
[ext_resource type="Script" path="res://Scripts/right_menu.gd" id="8_ygav1"]
[ext_resource type="AudioStream" uid="uid://skgcarvrdjkr" path="res://UI/hostilearchitecture.wav" id="11_ctc6o"]
[ext_resource type="Script" path="res://Scripts/SoundHandler.gd" id="12_5qpt2"]
[ext_resource type="Texture2D" uid="uid://tls02dcggskq" path="res://Textures/UI/heart.png" id="12_333s4"]
[ext_resource type="Texture2D" uid="uid://b0buytnhqsshw" path="res://Textures/UI/start.png" id="12_co4c3"]
[ext_resource type="AudioStream" uid="uid://be43bdiojrdlo" path="res://Sounds/hurt.mp3" id="13_pvvko"]
[ext_resource type="AudioStream" uid="uid://dfocsor5yjqjh" path="res://Sounds/game_over.mp3" id="14_cprcl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bn7pl"]
resource_name = "Test Tileset"
texture = ExtResource("1_0y4xf")
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x8coy"]
texture = ExtResource("3_1u0c1")
texture_region_size = Vector2i(128, 128)
use_texture_padding = false
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_m3k0l"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_bn7pl")
sources/1 = SubResource("TileSetAtlasSource_x8coy")

[sub_resource type="Curve2D" id="Curve2D_o0ayj"]
bake_interval = 0.01
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -106.669, 333.34, 0, 0, 0, 0, 603.345, 333.34, 0, 0, 0, 0, 600.012, 1053.35, 0, 0, 0, 0, 356.674, 1053.35, 0, 0, 0, 0, 360.007, 1773.37, 0, 0, 0, 0, 1796.7, 1773.37, 0, 0, 0, 0, 1800.04, 333.34, 0, 0, 0, 0, 1076.69, 333.34, 0, 0, 0, 0, 1080.02, 1053.35, 0, 0, 0, 0, 2516.72, 1053.35, 0, 0, 0, 0, 2520.05, 573.345, 0, 0, 0, 0, 3000.05, 573.345)
}
point_count = 12

[sub_resource type="ImageTexture" id="ImageTexture_ahdxx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ygul"]
texture = ExtResource("7_un8fm")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xn1i3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iix7f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btxjb"]

[sub_resource type="Theme" id="Theme_prv8g"]
VScrollBar/icons/decrement = SubResource("ImageTexture_ahdxx")
VScrollBar/icons/decrement_highlight = SubResource("ImageTexture_ahdxx")
VScrollBar/icons/decrement_pressed = SubResource("ImageTexture_ahdxx")
VScrollBar/icons/increment = SubResource("ImageTexture_ahdxx")
VScrollBar/icons/increment_highlight = SubResource("ImageTexture_ahdxx")
VScrollBar/icons/increment_pressed = SubResource("ImageTexture_ahdxx")
VScrollBar/styles/grabber = SubResource("StyleBoxTexture_8ygul")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_xn1i3")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_iix7f")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_btxjb")

[node name="test_level" type="Node2D"]

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource("1_utey3")

[node name="Towers" type="Node2D" parent="."]
z_index = 1
position = Vector2(334, 51)
script = ExtResource("2_7o725")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 3
scale = Vector2(1.875, 1.875)
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAADACAAAAAQAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAAFAAAAAQAAAAAAAFAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAGAIAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAKAAAAAQAAAAAAADALAAAAAQAAAAAAAAAAAAEAAQABAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAADAAAAQAAQAAAAAAADAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAADAAAAcAAQAAAAAAAGAAAAgAAQAAAAAAAAABAAEAAQABAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQACAAAAAGABAAUAAQABAAAAAAABAAYAAQABAAAAAAABAAcAAQACAAAAADABAAgAAQAAAAAAAAACAAEAAQACAAAAAAACAAIAAQABAAAAAAACAAMAAQABAAAAAAACAAQAAQACAAAAAFACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQABAAAAAAACAAgAAQAAAAAAAAADAAEAAQAAAAAAADADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAFADAAYAAQAAAAAAAAADAAcAAQABAAAAAAADAAgAAQAAAAAAAGAEAAEAAQACAAAAAGAEAAIAAQABAAAAAAAEAAMAAQABAAAAAAAEAAQAAQACAAAAADAEAAUAAQAAAAAAAAAEAAcAAQABAAAAAAAEAAgAAQAAAAAAAAAFAAEAAQABAAAAAAAFAAIAAQAAAAAAADAFAAcAAQABAAAAAAAFAAgAAQAAAAAAAAAGAAEAAQABAAAAAAAGAAIAAQAAAAAAADAGAAMAAQAAAAAAAFAGAAQAAQABAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQABAAAAAAAGAAgAAQAAAAAAAAAHAAEAAQACAAAAAAAHAAIAAQABAAAAAAAHAAMAAQABAAAAAAAHAAQAAQABAAAAAAAHAAUAAQABAAAAAAAHAAYAAQABAAAAAAAHAAcAAQACAAAAAFAHAAgAAQAAAAAAAGAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAADAIAAMAAQAAAAAAAAAIAAQAAQABAAAAAAAIAAUAAQAAAAAAAFAIAAYAAQAAAAAAAFAIAAcAAQAAAAAAAGAIAAgAAQAAAAAAAFAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQABAAAAAAAJAAUAAQAAAAAAAFAJAAYAAQAAAAAAAFAJAAcAAQAAAAAAAFAJAAgAAQAAAAAAAFAKAAEAAQAAAAAAAAAKAAIAAQACAAAAAGAKAAMAAQABAAAAAAAKAAQAAQACAAAAAFAKAAUAAQAAAAAAAFAKAAYAAQAAAAAAAFAKAAcAAQAAAAAAAGAKAAgAAQAAAAAAAFALAAEAAQAAAAAAAAALAAIAAQABAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAGALAAYAAQAAAAAAAFALAAcAAQAAAAAAAFALAAgAAQAAAAAAAFAFAAQAAQABAAAAAAAEAAYAAQAAAAAAAGAFAAYAAQAAAAAAAAAFAAUAAQAAAAAAAFAFAAMAAQAAAAAAAGA=")
tile_set = SubResource("TileSet_m3k0l")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(0.5, 0.5)
editor_draw_limits = true

[node name="Rounds" type="Node" parent="."]
script = ExtResource("3_5b40h")

[node name="SpawnTimer" type="Timer" parent="Rounds"]

[node name="RoundTimer" type="Timer" parent="Rounds"]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_o0ayj")

[node name="user_interface" type="CanvasLayer" parent="."]
script = ExtResource("8_ygav1")

[node name="side_panel" type="NinePatchRect" parent="user_interface"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("7_6jwmj")
patch_margin_left = 201
patch_margin_top = 218
patch_margin_right = 199
patch_margin_bottom = 209

[node name="MarginContainer" type="MarginContainer" parent="user_interface/side_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Control" type="Control" parent="user_interface/side_panel/MarginContainer"]
layout_mode = 2

[node name="budget_label" type="Label" parent="user_interface/side_panel/MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.05
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Budget: 12.0k"

[node name="shop_panel" type="ColorRect" parent="user_interface/side_panel/MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.2376, 0.29676, 0.36, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="user_interface/side_panel/MarginContainer/Control/shop_panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_prv8g")
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="user_interface/side_panel/MarginContainer/Control/shop_panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
columns = 2

[node name="hearts" type="Control" parent="user_interface/side_panel/MarginContainer/Control"]
layout_mode = 1
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.15

[node name="0" type="AspectRatioContainer" parent="user_interface/side_panel/MarginContainer/Control/hearts"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 0.5

[node name="TextureRect" type="TextureRect" parent="user_interface/side_panel/MarginContainer/Control/hearts/0"]
layout_mode = 2
texture = ExtResource("12_333s4")
expand_mode = 1

[node name="1" type="AspectRatioContainer" parent="user_interface/side_panel/MarginContainer/Control/hearts"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_right = 0.4
anchor_bottom = 0.5

[node name="TextureRect" type="TextureRect" parent="user_interface/side_panel/MarginContainer/Control/hearts/1"]
layout_mode = 2
texture = ExtResource("12_333s4")
expand_mode = 1

[node name="2" type="AspectRatioContainer" parent="user_interface/side_panel/MarginContainer/Control/hearts"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 0.5

[node name="TextureRect" type="TextureRect" parent="user_interface/side_panel/MarginContainer/Control/hearts/2"]
layout_mode = 2
texture = ExtResource("12_333s4")
expand_mode = 1

[node name="3" type="AspectRatioContainer" parent="user_interface/side_panel/MarginContainer/Control/hearts"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_right = 0.8
anchor_bottom = 0.5

[node name="TextureRect" type="TextureRect" parent="user_interface/side_panel/MarginContainer/Control/hearts/3"]
layout_mode = 2
texture = ExtResource("12_333s4")
expand_mode = 1

[node name="4" type="AspectRatioContainer" parent="user_interface/side_panel/MarginContainer/Control/hearts"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 0.5

[node name="TextureRect" type="TextureRect" parent="user_interface/side_panel/MarginContainer/Control/hearts/4"]
layout_mode = 2
texture = ExtResource("12_333s4")
expand_mode = 1

[node name="5" type="AspectRatioContainer" parent="user_interface/side_panel/MarginContainer/Control/hearts"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="user_interface/side_panel/MarginContainer/Control/hearts/5"]
layout_mode = 2
texture = ExtResource("12_333s4")
expand_mode = 1

[node name="6" type="AspectRatioContainer" parent="user_interface/side_panel/MarginContainer/Control/hearts"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="user_interface/side_panel/MarginContainer/Control/hearts/6"]
layout_mode = 2
texture = ExtResource("12_333s4")
expand_mode = 1

[node name="7" type="AspectRatioContainer" parent="user_interface/side_panel/MarginContainer/Control/hearts"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="user_interface/side_panel/MarginContainer/Control/hearts/7"]
layout_mode = 2
texture = ExtResource("12_333s4")
expand_mode = 1

[node name="8" type="AspectRatioContainer" parent="user_interface/side_panel/MarginContainer/Control/hearts"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="user_interface/side_panel/MarginContainer/Control/hearts/8"]
layout_mode = 2
texture = ExtResource("12_333s4")
expand_mode = 1

[node name="9" type="AspectRatioContainer" parent="user_interface/side_panel/MarginContainer/Control/hearts"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="user_interface/side_panel/MarginContainer/Control/hearts/9"]
layout_mode = 2
texture = ExtResource("12_333s4")
expand_mode = 1

[node name="NinePatchRect" type="NinePatchRect" parent="user_interface"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="start_button" type="TextureButton" parent="user_interface"]
anchors_preset = -1
anchor_left = 0.815
anchor_top = 1.0
anchor_right = 0.815
anchor_bottom = 1.11
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("12_co4c3")
stretch_mode = 0

[node name="remaining_label" type="Label" parent="user_interface"]
anchors_preset = -1
anchor_top = 0.988
anchor_right = 0.15
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Remaining:"
vertical_alignment = 2

[node name="total_label" type="Label" parent="user_interface"]
anchors_preset = -1
anchor_top = 0.94
anchor_right = 0.15
anchor_bottom = 0.97
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Total:"
vertical_alignment = 2

[node name="saved_label" type="Label" parent="user_interface"]
anchors_preset = -1
anchor_top = 0.9
anchor_right = 0.15
anchor_bottom = 0.94
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Saved:"
vertical_alignment = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ctc6o")
autoplay = true

[node name="SoundHandler" type="Node" parent="."]
script = ExtResource("12_5qpt2")

[node name="hurt_audio_stream_player" type="AudioStreamPlayer" parent="SoundHandler"]
stream = ExtResource("13_pvvko")

[node name="gain_money_audio_stream_player" type="AudioStreamPlayer" parent="SoundHandler"]
stream = ExtResource("13_pvvko")

[node name="game_over_audio_stream_player" type="AudioStreamPlayer" parent="SoundHandler"]
stream = ExtResource("14_cprcl")

[node name="game_won_audio_stream_player" type="AudioStreamPlayer" parent="SoundHandler"]
stream = ExtResource("14_cprcl")

[node name="background_audio_stream_player" type="AudioStreamPlayer" parent="SoundHandler"]

[connection signal="child_entered_tree" from="Enemies" to="Enemies" method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="Enemies" to="Enemies" method="_on_child_exiting_tree"]
[connection signal="pressed" from="user_interface/start_button" to="Rounds" method="_on_start_button_pressed"]
